@@ -760,6 +760,13 @@ class Params {
 		default = 1;
 		texts[] = {"$STR_DOM_MISSIONSTRING_922","$STR_DOM_MISSIONSTRING_1007"};
 	};
+	
+	class d_no_ai_silencer {
+		title = "$STR_DOM_MISSIONSTRING_2096";
+		values[] = {0,1};
+		default = 0;
+		texts[] = {"$STR_DOM_MISSIONSTRING_1007","$STR_DOM_MISSIONSTRING_922"};
+	};
 
 	class d_timemultiplier {
 		title = "$STR_DOM_MISSIONSTRING_1533";
